# VPlayer

./: .gitignore  LICENSE  Makefile  README.md  documentation.md
backend/: .env.sample  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_analysis_runs.py  0002_rebuild_analysis_runs.py
backend/app/: config.py  db.py  models.py  schemas.py
backend/app/routes/: __init__.py  analyze.py
backend/engine/: __init__.py  graph.py  llm.py  prompts.py  state.py
backend/engine/nodes/: __init__.py  cliffhanger_scorer.py  cliffhanger_strength_scorer.py  emotional_arc.py  emotional_arc_scorer.py  episode_planner.py  episode_scripter.py  input_classifier.py  optimizer.py  retention_risk.py  retention_risk_analyzer.py  story_decomposer.py  story_expander.py
frontend/: app.py  package-lock.json  package.json  requirements.txt
frontend/src/: App.jsx
frontend/src/components/: OptimizationReport.jsx  ResultsDashboard.jsx
frontend/src/hooks/: useStoryFlowStream.js
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx
frontend/src/utils/: generateStoryPdf.js
